--- a/Miyu/Feature/Profile/ProfileViewController.storyboard
+++ b/Miyu/Feature/Profile/ProfileViewController.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,7 +22,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="x86-C6-ouW">
                                 <rect key="frame" x="0.0" y="257" width="375" height="410"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="profileCell" id="zla-nG-quz">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -37,52 +38,59 @@
                                     <outlet property="delegate" destination="cn7-xV-1xf" id="QOR-a5-Nuc"/>
                                 </connections>
                             </tableView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Yy-wA-WhF">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <items>
-                                    <barButtonItem title="Add" id="gAP-r2-Y8R"/>
-                                </items>
-                            </toolbar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="YOU" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oYX-GB-xhe">
-                                <rect key="frame" x="166" y="12" width="36" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="random_1" translatesAutoresizingMaskIntoConstraints="NO" id="gYY-IN-Pyz">
-                                <rect key="frame" x="24" y="59" width="105" height="86"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="random_1" translatesAutoresizingMaskIntoConstraints="NO" id="gYY-IN-Pyz">
+                                <rect key="frame" x="24" y="59" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="gYY-IN-Pyz" secondAttribute="height" multiplier="1:1" id="68D-hC-1Eh"/>
+                                    <constraint firstAttribute="width" secondItem="gYY-IN-Pyz" secondAttribute="height" multiplier="1:1" id="Z7f-xO-zve"/>
+                                    <constraint firstAttribute="width" constant="80" id="lgZ-29-4L9"/>
+                                </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eLU-ge-RHg">
                                 <rect key="frame" x="0.0" y="201" width="375" height="56"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.50092310056058587" green="0.75530177581839064" blue="0.82078838832487311" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="4.67" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FxI-Gj-5WZ">
-                                <rect key="frame" x="114" y="125" width="34" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Leslie Pound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ysu-1C-l4w">
+                                <rect key="frame" x="104" y="59" width="98" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Currently working at hoodwinked" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftQ-qX-Yab">
-                                <rect key="frame" x="205" y="76" width="135" height="69"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.67" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FxI-Gj-5WZ">
+                                <rect key="frame" x="104" y="92" width="34" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Leslie Pound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ysu-1C-l4w">
-                                <rect key="frame" x="114" y="59" width="98" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="88E-Nh-ZaN">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="YOU" id="sB4-eh-4SS"/>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Currently working at hoodwinked" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftQ-qX-Yab">
+                                <rect key="frame" x="104" y="120" width="266" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.36068126307312853" green="0.40290094802092979" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="gYY-IN-Pyz" firstAttribute="top" secondItem="88E-Nh-ZaN" secondAttribute="bottom" constant="15" id="1SJ-yT-2v3"/>
+                            <constraint firstItem="Ysu-1C-l4w" firstAttribute="leading" secondItem="gYY-IN-Pyz" secondAttribute="trailing" id="7He-vI-AXM"/>
+                            <constraint firstItem="gYY-IN-Pyz" firstAttribute="leading" secondItem="PxE-bb-h4c" secondAttribute="leading" constant="24" id="A9P-x1-hig"/>
+                            <constraint firstItem="ftQ-qX-Yab" firstAttribute="leading" secondItem="Ysu-1C-l4w" secondAttribute="leading" id="Aer-2X-Bjg"/>
+                            <constraint firstItem="FxI-Gj-5WZ" firstAttribute="leading" secondItem="Ysu-1C-l4w" secondAttribute="leading" id="GGb-ts-2fn"/>
+                            <constraint firstItem="88E-Nh-ZaN" firstAttribute="leading" secondItem="PxE-bb-h4c" secondAttribute="leading" id="Gq4-Hv-EXH"/>
+                            <constraint firstItem="ftQ-qX-Yab" firstAttribute="top" secondItem="FxI-Gj-5WZ" secondAttribute="bottom" constant="7" id="Quk-dy-Wx7"/>
+                            <constraint firstItem="PxE-bb-h4c" firstAttribute="trailing" secondItem="88E-Nh-ZaN" secondAttribute="trailing" id="VAF-Dk-Nlz"/>
+                            <constraint firstItem="Ysu-1C-l4w" firstAttribute="top" secondItem="88E-Nh-ZaN" secondAttribute="bottom" constant="15" id="bAj-Y1-FDt"/>
+                            <constraint firstItem="PxE-bb-h4c" firstAttribute="top" secondItem="88E-Nh-ZaN" secondAttribute="top" constant="20" id="grq-tt-F6b"/>
+                            <constraint firstItem="PxE-bb-h4c" firstAttribute="trailing" secondItem="ftQ-qX-Yab" secondAttribute="trailing" constant="5" id="n9j-T2-Sv1"/>
+                            <constraint firstItem="FxI-Gj-5WZ" firstAttribute="top" secondItem="Ysu-1C-l4w" secondAttribute="bottom" constant="12" id="qHq-0C-VMb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="PxE-bb-h4c"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" id="lWf-z5-G5N"/>
