--- a/Miyu/Feature/Profile/ProfileViewController.storyboard
+++ b/Miyu/Feature/Profile/ProfileViewController.storyboard
@@ -19,27 +19,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="x86-C6-ouW">
-                                <rect key="frame" x="0.0" y="257" width="375" height="410"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="410" id="j06-uw-esn"/>
-                                </constraints>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="profileCell" id="zla-nG-quz">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zla-nG-quz" id="pLY-FM-4EW">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="cn7-xV-1xf" id="Z6o-ef-aQd"/>
-                                    <outlet property="delegate" destination="cn7-xV-1xf" id="QOR-a5-Nuc"/>
-                                </connections>
-                            </tableView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="random_1" translatesAutoresizingMaskIntoConstraints="NO" id="gYY-IN-Pyz">
                                 <rect key="frame" x="24" y="59" width="80" height="80"/>
                                 <constraints>
@@ -76,22 +55,28 @@
                                 <rect key="frame" x="0.0" y="149" width="375" height="108"/>
                                 <color key="backgroundColor" red="1" green="0.78007202561611755" blue="0.98925340130010453" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eN4-Hz-Vob" customClass="CustomTabView" customModule="Miyu" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="257" width="375" height="410"/>
+                                <color key="backgroundColor" red="1" green="0.83001911613902446" blue="0.53398158813248453" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.36068126307312853" green="0.40290094802092979" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="PxE-bb-h4c" firstAttribute="trailing" secondItem="0Du-eo-mVx" secondAttribute="trailing" id="0cu-tt-vwU"/>
+                            <constraint firstItem="PxE-bb-h4c" firstAttribute="bottom" secondItem="eN4-Hz-Vob" secondAttribute="bottom" id="124-yf-dvp"/>
                             <constraint firstItem="gYY-IN-Pyz" firstAttribute="top" secondItem="88E-Nh-ZaN" secondAttribute="bottom" constant="15" id="1SJ-yT-2v3"/>
-                            <constraint firstItem="x86-C6-ouW" firstAttribute="top" secondItem="0Du-eo-mVx" secondAttribute="bottom" id="6nz-Gm-8ko"/>
+                            <constraint firstItem="eN4-Hz-Vob" firstAttribute="top" secondItem="yTZ-vK-8PS" secondAttribute="top" constant="257" id="6a0-m3-fXi"/>
                             <constraint firstItem="Ysu-1C-l4w" firstAttribute="leading" secondItem="gYY-IN-Pyz" secondAttribute="trailing" id="7He-vI-AXM"/>
+                            <constraint firstItem="PxE-bb-h4c" firstAttribute="trailing" secondItem="eN4-Hz-Vob" secondAttribute="trailing" id="7iA-Rw-035"/>
                             <constraint firstItem="gYY-IN-Pyz" firstAttribute="leading" secondItem="PxE-bb-h4c" secondAttribute="leading" constant="24" id="A9P-x1-hig"/>
                             <constraint firstItem="ftQ-qX-Yab" firstAttribute="leading" secondItem="Ysu-1C-l4w" secondAttribute="leading" id="Aer-2X-Bjg"/>
                             <constraint firstItem="FxI-Gj-5WZ" firstAttribute="leading" secondItem="Ysu-1C-l4w" secondAttribute="leading" id="GGb-ts-2fn"/>
                             <constraint firstItem="88E-Nh-ZaN" firstAttribute="leading" secondItem="PxE-bb-h4c" secondAttribute="leading" id="Gq4-Hv-EXH"/>
-                            <constraint firstItem="x86-C6-ouW" firstAttribute="leading" secondItem="PxE-bb-h4c" secondAttribute="leading" id="NGk-cM-9Xi"/>
+                            <constraint firstItem="eN4-Hz-Vob" firstAttribute="leading" secondItem="PxE-bb-h4c" secondAttribute="leading" id="HKx-S8-6JC"/>
+                            <constraint firstItem="eN4-Hz-Vob" firstAttribute="top" secondItem="0Du-eo-mVx" secondAttribute="bottom" id="Jfw-qa-dGm"/>
                             <constraint firstItem="ftQ-qX-Yab" firstAttribute="top" secondItem="FxI-Gj-5WZ" secondAttribute="bottom" constant="7" id="Quk-dy-Wx7"/>
-                            <constraint firstItem="PxE-bb-h4c" firstAttribute="trailing" secondItem="x86-C6-ouW" secondAttribute="trailing" id="Qyk-wg-lzw"/>
-                            <constraint firstItem="PxE-bb-h4c" firstAttribute="bottom" secondItem="x86-C6-ouW" secondAttribute="bottom" id="UNk-dt-cSI"/>
                             <constraint firstItem="PxE-bb-h4c" firstAttribute="trailing" secondItem="88E-Nh-ZaN" secondAttribute="trailing" id="VAF-Dk-Nlz"/>
+                            <constraint firstItem="eN4-Hz-Vob" firstAttribute="top" secondItem="0Du-eo-mVx" secondAttribute="bottom" id="W42-DE-9hp"/>
                             <constraint firstItem="Ysu-1C-l4w" firstAttribute="top" secondItem="88E-Nh-ZaN" secondAttribute="bottom" constant="15" id="bAj-Y1-FDt"/>
                             <constraint firstItem="0Du-eo-mVx" firstAttribute="leading" secondItem="PxE-bb-h4c" secondAttribute="leading" id="cOo-4B-gpI"/>
                             <constraint firstItem="PxE-bb-h4c" firstAttribute="top" secondItem="88E-Nh-ZaN" secondAttribute="top" constant="20" id="grq-tt-F6b"/>
@@ -103,9 +88,9 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" id="lWf-z5-G5N"/>
                     <connections>
+                        <outlet property="customTabView" destination="eN4-Hz-Vob" id="sJU-KJ-lso"/>
                         <outlet property="profileImage" destination="gYY-IN-Pyz" id="mYO-s2-xOd"/>
                         <outlet property="profileMenuBar" destination="0Du-eo-mVx" id="R5j-RN-QSC"/>
-                        <outlet property="tableView" destination="x86-C6-ouW" id="n10-vr-Cjd"/>
                         <outlet property="userAttribute" destination="ftQ-qX-Yab" id="3gY-G3-h3Z"/>
                         <outlet property="userName" destination="Ysu-1C-l4w" id="SU2-HR-fMA"/>
                         <outlet property="userRating" destination="FxI-Gj-5WZ" id="kbf-KZ-u5y"/>
