friend table list set

--- a/Miyu/Feature/Profile/Custom Container View/Container Content Cells/Content Friend Table Cell/ContentFriendTableViewCell.xib
+++ b/Miyu/Feature/Profile/Custom Container View/Container Content Cells/Content Friend Table Cell/ContentFriendTableViewCell.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,18 +20,54 @@
                 <rect key="frame" x="0.0" y="0.0" width="347" height="84.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lau-t5-vYr">
-                        <rect key="frame" x="16" y="17" width="42" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lau-t5-vYr">
+                        <rect key="frame" x="74" y="12.5" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jZm-W8-zvS">
+                        <rect key="frame" x="74" y="53.5" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fue-6S-3fd">
+                        <rect key="frame" x="6" y="12.5" width="60" height="60"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="7WI-qy-Hhm"/>
+                            <constraint firstAttribute="height" constant="60" id="KbO-ah-LnP"/>
+                            <constraint firstAttribute="width" secondItem="fue-6S-3fd" secondAttribute="height" multiplier="1:1" id="yl4-J8-K0h"/>
+                        </constraints>
+                    </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9DS-Pf-AUH">
+                        <rect key="frame" x="285" y="27" width="46" height="30"/>
+                        <state key="normal" title="Button"/>
+                        <connections>
+                            <action selector="friendButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="10f-ih-0Fm"/>
+                        </connections>
+                    </button>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="fue-6S-3fd" secondAttribute="bottom" constant="12" id="57B-ZW-CW8"/>
+                    <constraint firstItem="Lau-t5-vYr" firstAttribute="leading" secondItem="fue-6S-3fd" secondAttribute="trailing" constant="8" id="JFP-5N-git"/>
+                    <constraint firstItem="fue-6S-3fd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Ov7-8n-U4Q"/>
+                    <constraint firstItem="Lau-t5-vYr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12.5" id="TNu-Cd-4UW"/>
+                    <constraint firstItem="jZm-W8-zvS" firstAttribute="top" secondItem="Lau-t5-vYr" secondAttribute="bottom" constant="20" id="Xr9-Kc-6gL"/>
+                    <constraint firstItem="jZm-W8-zvS" firstAttribute="leading" secondItem="Lau-t5-vYr" secondAttribute="leading" id="fuZ-1U-bDE"/>
+                    <constraint firstItem="9DS-Pf-AUH" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="jUV-lP-lxo"/>
+                    <constraint firstAttribute="trailing" secondItem="9DS-Pf-AUH" secondAttribute="trailing" constant="16" id="w9b-yy-TZO"/>
+                </constraints>
             </tableViewCellContentView>
+            <constraints>
+                <constraint firstItem="fue-6S-3fd" firstAttribute="leading" secondItem="njF-e1-oar" secondAttribute="leading" constant="6" id="oIj-gx-Oya"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="friendButton" destination="9DS-Pf-AUH" id="k52-r5-LuL"/>
                 <outlet property="friendName" destination="Lau-t5-vYr" id="KBB-zM-YG9"/>
+                <outlet property="profileImage" destination="fue-6S-3fd" id="D6A-mv-Vdc"/>
+                <outlet property="rating" destination="jZm-W8-zvS" id="gYU-hL-l5y"/>
             </connections>
             <point key="canvasLocation" x="47.5" y="74.5"/>
         </tableViewCell>
